新增测试类所需参数